[package]
name = "xilinx-dma"
version = "0.0.8"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/xilinx-dma/"
readme = "README.md"
description = "Userspace Xilinx AXI DMA Interface"
keywords = ["sdr", "dsp", "real-time", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]

[[example]]
name = "async"
required-features = ["async"]

[features]
default = []
async = ["dep:async-io"]

[dependencies]
libc = "0.2"
anyhow = "1.0"
async-io = { version = "1.13", optional = true }

[dev-dependencies]
fastrand = "2.0"

[build-dependencies]
cc = "1.0"
