[package]
name = "xilinx-dma"
version = "0.0.9"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/xilinx-dma/"
readme = "README.md"
description = "Userspace Xilinx AXI DMA Interface"
keywords = ["sdr", "dsp", "real-time", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "sg_loopback"
required-features = ["scatter-gather"]

[features]
default = []
async = ["dep:async-io"]
scatter-gather = []

[dependencies]
async-io = { version = "2.2", optional = true }
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
fastrand = "2.0"

[build-dependencies]
cc = "1.0"
